# claude-code-tts

./: .gitignore  .pre-commit-config.yaml  .pymarkdown.yaml  LICENSE  README.md  install.sh  pyproject.toml
docs/: TTS_HOOK_DOCUMENTATION.md
hooks/: README.md  tts-interrupt-hook.sh  tts-pretooluse-hook.sh  tts-session-end-hook.sh  tts-stop-hook.sh
scripts/: audio-duck.sh  strip_markdown.py
